--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
+title: J. M. L. Whittington
+description: Scholar (and lover) of games and theme parks
+show_downloads: true
 theme: jekyll-theme-minimal
